# tinyfish-search-fetch-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tinyfish_search_fetch_mcp/: __init__.py  server.py
tests/: test_server.py
