[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyfish-search-fetch-mcp"
version = "0.1.0"
description = "TinyFish Search/Fetch-only stdio MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
     {name = "dummie21", email = "45493448+dummie21@users.noreply.github.com"},

]
keywords = ["mcp", "tinyfish", "search", "fetch", "ai", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.4.2,<4",
    "tinyfish>=0.2.5,<0.3",
    "python-json-logger>=4.1,<5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/tinyfish/tinyfish-search-fetch-mcp"
"Bug Tracker" = "https://github.com/tinyfish/tinyfish-search-fetch-mcp/issues"

[project.scripts]
tinyfish-search-fetch-mcp = "tinyfish_search_fetch_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
